--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">LetsWatch</string>
     <string name="imageDescription">The poster of the movie</string>
+    <string name="img_content_description">Movie image</string>
 </resources>
